# dev-team

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  docker-compose.yml  pyproject.toml
agents/librarian/: Dockerfile  pyproject.toml
agents/librarian/config/: base.yaml
agents/librarian/scripts/: verify_sandbox.py  verify_sandbox.sh
agents/librarian/src/librarian_agent/: __init__.py  graph.py  lifespan_helpers.py  server.py  settings.py  tools.py
agents/librarian/tests/: test_graph_helpers.py  test_tools.py
agents/primary/: Dockerfile  README.md  langgraph.json  pyproject.toml
agents/primary/config/: base.yaml
agents/primary/resources/: issue-management-guide.md  wiki-authoring-guide.md
agents/primary/src/primary_agent/: __init__.py  channels.py  chat_handler.py  graph.py  lifespan_helpers.py  server.py  settings.py  tools.py
agents/primary/src/primary_agent/chat_handler/: __init__.py  router.py  session.py  worker.py
agents/primary/src/primary_agent/tools/: __init__.py  doc_store.py  issue_tracker.py  librarian.py  wiki.py
agents/primary/tests/: test_graph.py  test_tools.py
chronicler/: CLAUDE.md  Dockerfile  pyproject.toml
chronicler/src/chronicler/: __init__.py  config.py  consumer.py  handler.py  main.py
chronicler/src/chronicler/processors/: __init__.py  a2a_context_end.py  a2a_context_start.py  a2a_message_append.py  a2a_task_artifact.py  a2a_task_create.py  a2a_task_status_update.py  assignment_create.py  assignment_update.py  base.py  chat_append.py  chat_session_end.py  chat_session_start.py  item_append.py  session_end.py  session_start.py
chronicler/tests/: test_handler.py
docs/: agent-runtime.md  infra-setup.md  (+5 more)
mcp/document-db/: CLAUDE.md  Dockerfile  pyproject.toml
mcp/document-db/migrations/: 002_issues.rollback.sql  003_wiki_pages.rollback.sql  003_wiki_pages.sql
mcp/document-db/src/document_db_mcp/: __init__.py  config.py  mcp_instance.py  server.py
mcp/document-db/src/document_db_mcp/repositories/: __init__.py  agent_item.py  agent_session.py  agent_task.py  base.py  issue.py  wiki_page.py
mcp/document-db/src/document_db_mcp/schemas/: __init__.py  agent_session.py  wiki_page.py
mcp/document-db/src/document_db_mcp/tools/: __init__.py  agent_item.py  agent_session.py  agent_task.py  issue.py  wiki_page.py
mcp/document-db/tests/: test_repositories.py  test_schemas.py
mcp/issue-tracker/: CLAUDE.md  Dockerfile  pyproject.toml
mcp/issue-tracker/scripts/: verify_sandbox.py  verify_sandbox.sh
mcp/issue-tracker/src/issue_tracker_mcp/: __init__.py  config.py  factory.py  mcp_instance.py  server.py
mcp/issue-tracker/src/issue_tracker_mcp/adapters/: __init__.py  _github_http.py  base.py  github.py
mcp/issue-tracker/src/issue_tracker_mcp/tools/: __init__.py  field.py  issue.py  status.py  type.py
mcp/issue-tracker/tests/: test_adapter_github.py  test_schemas.py
mcp/wiki/: CLAUDE.md  Dockerfile  pyproject.toml
mcp/wiki/scripts/: verify_sandbox.py  verify_sandbox.sh
mcp/wiki/src/wiki_mcp/: __init__.py  config.py  factory.py  mcp_instance.py  server.py
mcp/wiki/src/wiki_mcp/adapters/: __init__.py  base.py
mcp/wiki/src/wiki_mcp/tools/: __init__.py  page.py
mcp/wiki/tests/: test_front_matter.py  test_github_page_ops.py  test_schemas.py
shared/: CLAUDE.md  pyproject.toml
shared/src/dev_team_shared/: __init__.py  utils.py
shared/src/dev_team_shared/a2a/: README.md  __init__.py  agent_card.py  client.py  decision.py  events.py  jsonrpc.py  messaging.md  tracing.py  types.py
shared/src/dev_team_shared/a2a/server/: README.md  __init__.py  graph_handlers.py  handler.py  router.py  sse.py
shared/src/dev_team_shared/adapters/: __init__.py
shared/src/dev_team_shared/adapters/llm/: __init__.py
shared/src/dev_team_shared/agent_graph/: __init__.py  react.py
shared/src/dev_team_shared/chat_protocol/: __init__.py  _chat_event_buffer.py  schemas.py  session_runtime.py  sse.py
shared/src/dev_team_shared/chat_protocol/schemas/: __init__.py  chat.py  events.py  session.py
shared/src/dev_team_shared/chat_protocol/session/: __init__.py  chat_event_buffer.py  registry.py  runtime.py
shared/src/dev_team_shared/config_loader/: __init__.py  loader.py
shared/src/dev_team_shared/doc_store/: __init__.py  client.py  tool_names.py
shared/src/dev_team_shared/doc_store/schemas/: __init__.py  a2a_context.py  a2a_message.py  a2a_task.py  a2a_task_artifact.py  a2a_task_status_update.py  agent_task.py  assignment.py  chat.py  issue.py  session.py  wiki_page.py
shared/src/dev_team_shared/document_db/: __init__.py  client.py  tool_names.py
shared/src/dev_team_shared/document_db/schemas/: __init__.py  agent_item.py
shared/src/dev_team_shared/event_bus/: __init__.py  bus.py  events.py
shared/src/dev_team_shared/issue_tracker/: __init__.py  _ops_client.py  client.py  tool_names.py
shared/src/dev_team_shared/issue_tracker/schemas/: __init__.py  issue.py  refs.py
shared/src/dev_team_shared/lifespan/: __init__.py  checkpointer.py  event_bus.py
shared/src/dev_team_shared/llm/: __init__.py  factory.py
shared/src/dev_team_shared/llm/providers/: __init__.py  anthropic.py
shared/src/dev_team_shared/mcp_client/: __init__.py  client.py
shared/src/dev_team_shared/wiki/: __init__.py  _ops_client.py  client.py  tool_names.py
shared/tests/: test_a2a_client.py  test_a2a_graph_sanity.py  test_a2a_traceid.py  test_agent_card.py  test_chat_protocol.py  test_chat_session_runtime.py  test_config_loader.py  test_event_bus.py  test_llm_factory.py
user-gateway/: Dockerfile  README.md  pyproject.toml
user-gateway/docs/: sse.md
user-gateway/frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
user-gateway/frontend/src/: App.tsx  api.ts  main.tsx  styles.css  types.ts
user-gateway/frontend/src/components/: Chat.tsx  MessageBubble.tsx  Sidebar.tsx
user-gateway/src/user_gateway/: __init__.py  config.py  event_publisher.py  main.py  middleware.py  routes.py  sse.py  translator.py  upstream.py
user-gateway/src/user_gateway/routes/: __init__.py  chat.py  health.py  history.py  sessions.py
(+103 files in other folders)
