[project]
name = "chronicler"
version = "0.1.0"
description = "Chronicler (CHR) — A2A 대화 이벤트 수집 / Document DB 영속화"
requires-python = ">=3.13,<3.14"

dependencies = [
  "dev-team-shared",   # event_bus + mcp_client + jsonrpc 등 재사용
  "redis>=7.4.0",
  "mcp>=1.27.0",
  "pydantic>=2.13.3",
  "pydantic-settings>=2.14.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0.3",
  "pytest-asyncio>=1.3.0",
]

[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.uv.sources]
dev-team-shared = { path = "../shared", editable = true }
