[project]
name = "dev-team-shared"
version = "0.1.0"
description = "dev-team 공통 파이썬 패키지 (Role Config, A2A, LLM 어댑터)"
requires-python = ">=3.13,<3.14"

# 모든 하한은 PyPI 최신 stable (2026-04-22 시점) 기준
dependencies = [
  # LangChain / LangGraph 스택
  "langchain>=1.2.15",
  "langchain-core>=1.3.0",
  "langgraph>=1.1.9",
  "langgraph-api>=0.8.0",
  # LLM provider — Anthropic만 초기 구현
  "langchain-anthropic>=1.4.1",
  # Config / 검증
  "pydantic>=2.13.3",
  "pyyaml>=6.0.3",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0.3",
  "pytest-asyncio>=1.3.0",
  "ruff>=0.15.11",
  "mypy>=1.20.2",
]

[build-system]
requires = ["hatchling>=1.29.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dev_team_shared"]
