[project]
name = "dev-team-shared"
version = "0.1.0"
description = "dev-team 공통 파이썬 패키지 (Role Config, A2A, LLM 어댑터)"
requires-python = ">=3.13,<3.14"

# 모든 하한은 PyPI 최신 stable (2026-04-22 시점) 기준
dependencies = [
  # LangChain / LangGraph 엔진 (OSS)
  "langchain>=1.2.15",
  "langchain-core>=1.3.0",
  "langgraph>=1.1.9",
  # Postgres 기반 영속 체크포인터 (OSS) — graph.compile(checkpointer=...) 에 직접 wiring
  "langgraph-checkpoint-postgres>=3.0.5",
  "psycopg[binary,pool]>=3.2.0",
  # LLM provider — Anthropic만 초기 구현
  "langchain-anthropic>=1.4.1",
  # HTTP 서버 — 자체 A2A 구현 (langgraph-api 비의존)
  "fastapi>=0.120.0",
  "uvicorn[standard]>=0.32.0",
  "httpx>=0.28.0",
  # Config / 검증
  "pydantic>=2.13.3",
  "pyyaml>=6.0.3",
  # Valkey / Redis client — event_bus publish + CHR consumer 가 사용
  "redis>=7.4.0",
  # MCP 클라이언트 — shared/mcp_client 가 streamable HTTP wrapper. CHR / L 등 공유.
  "mcp>=1.27.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0.3",
  "pytest-asyncio>=1.3.0",
  "ruff>=0.15.11",
  "mypy>=1.20.2",
]

[build-system]
requires = ["hatchling>=1.29.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dev_team_shared"]
