[project]
name = "user-gateway"
version = "0.1.0"
description = "User Gateway — 사용자 웹 UI + Primary A2A 중계"
requires-python = ">=3.13,<3.14"

dependencies = [
  "dev-team-shared",
  "fastapi>=0.120.0",
  "uvicorn[standard]>=0.32.0",
  "httpx>=0.28.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0.3",
  "pytest-asyncio>=1.3.0",
]

[tool.uv.sources]
dev-team-shared = { workspace = true }

[build-system]
requires = ["hatchling>=1.29.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/user_gateway"]
