[project]
name = "issue-tracker-mcp"
version = "0.1.0"
description = "IssueTracker MCP — GitHub Issues + Projects v2 어댑터 over streamable HTTP for dev-team agents"
requires-python = ">=3.13,<3.14"

dependencies = [
  # 공용 contract — schemas + 도구명 상수 + typed client (server / client 공유)
  "dev-team-shared",
  # MCP SDK — streamable HTTP transport (spec 2025-06-18)
  "mcp>=1.27.0",
  # GitHub REST + GraphQL 호출 (SDK 미사용 — Projects v2 가 GraphQL only 라 SDK 도 wrapping 수준, 의존성 최소화)
  "httpx>=0.28.0",
  # Schema validation
  "pydantic>=2.13.3",
  # env / config
  "pydantic-settings>=2.14.0",
  # ASGI server (streamable HTTP 위에 올리기 위함)
  "uvicorn[standard]>=0.32.0",
  # FastAPI (MCP 의 streamable HTTP app 마운트용)
  "fastapi>=0.120.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0.3",
  "pytest-asyncio>=1.3.0",
  "respx>=0.22.0",
]

[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.uv.sources]
dev-team-shared = { path = "../../shared", editable = true }
