[project]
name = "wiki-mcp"
version = "0.1.0"
description = "Wiki MCP — GitHub Wiki (별 git repo) 어댑터 over streamable HTTP for dev-team agents"
requires-python = ">=3.13,<3.14"

dependencies = [
  # 공용 contract — schemas + 도구명 상수 + typed client (server / client 공유)
  "dev-team-shared",
  # MCP SDK — streamable HTTP transport (spec 2025-06-18)
  "mcp>=1.27.0",
  # Schema validation
  "pydantic>=2.13.3",
  # env / config
  "pydantic-settings>=2.14.0",
  # YAML front matter parse / dump
  "pyyaml>=6.0.2",
  # ASGI server
  "uvicorn[standard]>=0.32.0",
  # FastAPI (MCP streamable HTTP app)
  "fastapi>=0.120.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0.3",
  "pytest-asyncio>=1.3.0",
]

[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.uv.sources]
dev-team-shared = { path = "../../shared", editable = true }
